fixing overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@ body {
   background-repeat: no-repeat;
   background-size: 800px;
   background-position: 90% -25%;
+  overflow-x: hidden;
 }
 
 #cta {
